--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
   "license": "BSD-3-Clause",
   "author": {
     "name": "Project Jupyter Contributors",
-    "email": "me@test.com"
+    "email": ""
   },
   "files": [
     "lib/**/*.{d.ts,eot,gif,html,jpg,js,js.map,json,png,svg,woff2,ttf}",
-    "style/**/*.{css,js,eot,gif,html,jpg,json,png,svg,woff2,ttf}"
+    "style/**/*.{css,js,eot,gif,html,jpg,json,png,svg,woff2,ttf}",
+    "schema/*.json"
   ],
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -32,7 +33,8 @@
     "build:prod": "jlpm clean && jlpm build:lib && jlpm build:labextension",
     "build:labextension": "jupyter labextension build .",
     "build:labextension:dev": "jupyter labextension build --development True .",
-    "build:lib": "tsc",
+    "build:lib": "jlpm build:schema && tsc",
+    "build:schema": "find -path './src/schema/*.json' | grep -Po 'schema/\\K[^/]*?(?=.json)' | xargs -I % sh -c 'json2ts src/schema/%.json | prettier --stdin-filepath _%.d.ts > src/types/_%.ts'",
     "clean": "jlpm clean:lib",
     "clean:lib": "rimraf lib tsconfig.tsbuildinfo",
     "clean:lintcache": "rimraf .eslintcache .stylelintcache",
@@ -60,14 +62,18 @@
     "@babel/core": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
     "@jupyterlab/builder": "^3.1.0",
+    "@jupyterlab/launcher": "^3.1.0",
     "@jupyterlab/testutils": "^3.0.0",
+    "@rjsf/core": "^3.0.0",
     "@types/jest": "^26.0.0",
+    "@types/json-schema": "^7.0.7",
     "@typescript-eslint/eslint-plugin": "^4.8.1",
     "@typescript-eslint/parser": "^4.8.1",
     "eslint": "^7.14.0",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-prettier": "^3.1.4",
     "jest": "^26.0.0",
+    "json-schema-to-typescript": "^8.0.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.1.1",
     "rimraf": "^3.0.2",
@@ -76,8 +82,8 @@
     "stylelint-config-recommended": "^6.0.0",
     "stylelint-config-standard": "~24.0.0",
     "stylelint-prettier": "^2.0.0",
-    "typescript": "~4.1.3",
-    "ts-jest": "^26.0.0"
+    "ts-jest": "^26.0.0",
+    "typescript": "~4.1.3"
   },
   "sideEffects": [
     "style/*.css",
@@ -87,7 +93,7 @@
   "publishConfig": {
     "access": "public"
   },
-  "jupyterlab": { 
+  "jupyterlab": {
     "extension": true,
     "outputDir": "jupyterlab-ui-profiler/labextension"
   },
