--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,5 +20,5 @@
     "target": "es2017",
     "types": ["jest"]
   },
-  "include": ["src/*"]
+  "include": ["src/*", "src/types/*", "src/schema/*.json"]
 }
