--- a/package.json
+++ b/package.json
@@ -61,9 +61,13 @@
   "devDependencies": {
     "@babel/core": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
+    "@jupyterlab/apputils": "^3.1.0",
     "@jupyterlab/builder": "^3.1.0",
+    "@jupyterlab/filebrowser": "^3.5.0",
     "@jupyterlab/launcher": "^3.1.0",
     "@jupyterlab/testutils": "^3.0.0",
+    "@lumino/datagrid": "^0.36.4",
+    "@lumino/widgets": "^1.34.1",
     "@rjsf/core": "^3.0.0",
     "@types/jest": "^26.0.0",
     "@types/json-schema": "^7.0.7",
