--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -18,6 +18,8 @@ graft ui-tests
 prune **/node_modules
 prune lib
 prune binder
+prune ui-profiler-results
+prune archive
 
 # Patterns to exclude from any directory
 global-exclude *~
@@ -25,3 +27,4 @@ global-exclude *.pyc
 global-exclude *.pyo
 global-exclude .git
 global-exclude .ipynb_checkpoints
+global-exclude *.ipynb
