--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,7 @@ jobs:
 
     steps:
     - name: Checkout
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
 
     - name: Base Setup
       uses: jupyterlab/maintainer-tools/.github/actions/base-setup@v1
@@ -49,10 +49,10 @@ jobs:
         pip uninstall -y "jupyterlab-ui-profiler" jupyterlab
 
     - name: Upload extension packages
-      uses: actions/upload-artifact@v2
+      uses: actions/upload-artifact@v3
       with:
         name: extension-artifacts
-        path: dist/jupyterlab-ui-profiler*
+        path: dist/jupyterlab_ui_profiler*
         if-no-files-found: error
 
   test_isolated:
@@ -61,13 +61,13 @@ jobs:
 
     steps:
     - name: Checkout
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
     - name: Install Python
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v4
       with:
         python-version: '3.9'
         architecture: 'x64'
-    - uses: actions/download-artifact@v2
+    - uses: actions/download-artifact@v3
       with:
         name: extension-artifacts
     - name: Install and Test
@@ -77,7 +77,7 @@ jobs:
         sudo rm -rf $(which node)
         sudo rm -rf $(which node)
 
-        pip install "jupyterlab~=3.1" jupyterlab-ui-profiler*.whl
+        pip install "jupyterlab~=3.1" jupyterlab_ui_profiler*.whl
 
 
         jupyter labextension list
@@ -94,20 +94,20 @@ jobs:
 
     steps:
     - name: Checkout
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
 
     - name: Base Setup
       uses: jupyterlab/maintainer-tools/.github/actions/base-setup@v1
 
     - name: Download extension package
-      uses: actions/download-artifact@v2
+      uses: actions/download-artifact@v3
       with:
         name: extension-artifacts
         
     - name: Install the extension
       run: |
         set -eux
-        python -m pip install "jupyterlab~=3.1" jupyterlab-ui-profiler*.whl
+        python -m pip install "jupyterlab~=3.1" jupyterlab_ui_profiler*.whl
 
     - name: Install dependencies
       working-directory: ui-tests
@@ -116,7 +116,7 @@ jobs:
       run: jlpm install
 
     - name: Set up browser cache
-      uses: actions/cache@v2
+      uses: actions/cache@v3
       with:
         path: |
           ${{ github.workspace }}/pw-browsers
@@ -133,7 +133,7 @@ jobs:
 
     - name: Upload Playwright Test report
       if: always()
-      uses: actions/upload-artifact@v2
+      uses: actions/upload-artifact@v3
       with:
         name: jupyterlab-ui-profiler-playwright-tests
         path: |
