--- a/.github/workflows/check-release.yml
+++ b/.github/workflows/check-release.yml
@@ -16,12 +16,15 @@ jobs:
       - name: Install Dependencies
         run: |
           pip install -e .
+      - name: List files
+        run: |
+          ls
       - name: Check Release
         uses: jupyter-server/jupyter_releaser/.github/actions/check-release@v2
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
       - name: Upload Distributions
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v3
         with:
           name: jupyterlab-ui-profiler-releaser-dist-${{ github.run_number }}
           path: .jupyter_releaser_checkout/dist
