--- a/package.json
+++ b/package.json
@@ -112,7 +112,8 @@
     "hooks": {
       "before-build-npm": [
         "python -m pip install jupyterlab~=3.1",
-        "jlpm"
+        "jlpm",
+        "jlpm build:prod"
       ],
       "before-build-python": [
         "jlpm clean:all"
