Install jupyterlab for playwright update

--- a/.github/workflows/update-integration-tests.yml
+++ b/.github/workflows/update-integration-tests.yml
@@ -32,6 +32,7 @@ jobs:
       - name: Install dependencies
         run: |
           set -eux
+          python -m pip install jupyterlab
           jlpm
           python -m pip install .
 
