--- a/.github/workflows/update-integration-tests.yml
+++ b/.github/workflows/update-integration-tests.yml
@@ -29,10 +29,15 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Base Setup
+        uses: jupyterlab/maintainer-tools/.github/actions/base-setup@v1
+
       - name: Install dependencies
+        run: python -m pip install -U jupyterlab~=3.1
+
+      - name: Install extension
         run: |
           set -eux
-          python -m pip install jupyterlab
           jlpm
           python -m pip install .
 
