--- a/readthedocs.yml
+++ b/readthedocs.yml
@@ -1,8 +1,12 @@
 version: 2
 sphinx:
   configuration: docs/source/conf.py
+build:
+  os: ubuntu-20.04
+  tools:
+    python: "3.8"
+    nodejs: "14"
 python:
-  version: 3.8
   install:
     - method: pip
       path: .
