--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,8 +55,8 @@ artifacts = ["jupyterlab_ui_profiler/labextension"]
 exclude = [".github", "binder"]
 
 [tool.hatch.build.targets.wheel.shared-data]
-"jupyterlab_ui_profiler/labextension" = "share/jupyter/labextensions/@jupyterlab-benchmarks/ui-profiler"
-"install.json" = "share/jupyter/labextensions/@jupyterlab-benchmarks/ui-profiler/install.json"
+"jupyterlab_ui_profiler/labextension" = "share/jupyter/labextensions/@jupyterlab/ui-profiler"
+"install.json" = "share/jupyter/labextensions/@jupyterlab/ui-profiler/install.json"
 "jupyter-config/server-config" = "etc/jupyter/jupyter_server_config.d"
 "jupyter-config/nb-config" = "etc/jupyter/jupyter_notebook_config.d"
 
