--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ node_modules/
 .ipynb_checkpoints
 *.tsbuildinfo
 jupyterlab_ui_profiler/labextension
+jupyterlab_ui_profiler/_version.py
 
 # custom
 archive/
